nexus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  replicas: 1
  serviceName: nexus
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: "sonatype/nexus3:3.34.0"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 3000Mi
          ports:
            - containerPort: 8081
              name: nexus-http
            - containerPort: 5000
              name: docker
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
      terminationGracePeriodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 512Gi
