nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  name: nexus
spec:
  tls:
  - hosts:
    - '*.heating.ai'
    secretName: heating-ai-tls
  rules:
  - host: nexus.heating.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port: 
              number: 8081
  - host: hub.heating.ai 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nexus-service
            port: 
              number: 5000
